# inkognito

./: CLAUDE.md  DESIGN.md  PYPI_PUBLISH_GUIDE.md  README.md  __init__.py  __main__.py  anonymizer.py  implementation_plan.md  manual_test.py  pyproject.toml  quick_test.py  server.py  test-plan.md  vault.py
docs/: implementation_plan.md  test-plan.md  test-summary.md
extractors/: docling.py  registry.py
sample_code/: __init__.py  anonymizer.py  segmenter.py  server.py  vault.py
sample_code/extractors/: __init__.py  azure_di.py  docling.py  llamaindex.py  mineru.py
src/inkognito/: __init__.py  __main__.py  server.py
src/inkognito/extractors/: docling.py
test_output/quick_test/: REPORT.md
tests/: conftest.py  test_anonymizer.py  test_server.py
tests/extractors/: test_base.py  test_extractors.py
tests/integration/: test_fastmcp.py  test_with_live_server.py
