[project]
name = "inkognito"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "fastmcp>=2.11.0",
    "llm-guard>=0.3.0",
    "faker>=20.0.0",
    "tiktoken>=0.5.0",
    "aiofiles>=23.0.0",
    "python-magic>=0.4.0",
]

[project.optional-dependencies]
azure = ["azure-ai-documentintelligence>=1.0.0b1"]
llamaindex = ["llama-index>=0.9.0", "llama-parse>=0.3.0"]
docling = ["docling>=1.0.0"]
mineru = ["magic-pdf>=0.6.0"]
all = ["inkognito[azure,llamaindex,docling,mineru]"]

[project.scripts]
inkognito = "inkognito.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
