[project]
name = "inkognito"
version = "0.1.0"
requires-python = ">=3.10,<3.13"
dependencies = [
    "fastmcp>=2.11.0",
    "llm-guard>=0.3.0",
    "faker>=20.0.0",
    "tiktoken>=0.5.0",
    "aiofiles>=23.0.0",
    "python-magic>=0.4.0",
    "pip>=25.2",
    "docling>=2.25",
]

[project.optional-dependencies]
azure = ["azure-ai-documentintelligence>=1.0.0b1"]
llamaindex = ["llama-index>=0.9.0", "llama-parse>=0.3.0"]
docling = ["docling>=1.0.0"]
mineru = ["magic-pdf>=0.6.0"]
all = ["inkognito[azure,llamaindex,docling,mineru]"]

[project.scripts]
inkognito = "server:server.run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = [
    "*.py",
    "extractors/**/*.py",
]
exclude = [
    "tests/**",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
    "pytest-mock>=3.14.1",
]
